# MouseWithoutBorders

./: .gitignore  Cargo.toml  DEV_NOTES.md  PLAN.md  README.md  result.md  test.md  windows-instructions.md
.github/workflows/: audio-build.yml
apps/edge-controller-win/: Cargo.toml
apps/edge-controller-win/src/: main.rs
apps/edge-receiver-linux/: Cargo.toml
apps/edge-receiver-linux/src/: cursor_handoff.rs  main.rs  tray.rs
config/: controller.example.toml  receiver.example.toml
crates/edge-audio/: Cargo.toml
crates/edge-audio/src/: lib.rs
crates/edge-common/: Cargo.toml
crates/edge-common/src/: lib.rs
crates/edge-crypto/: Cargo.toml
crates/edge-crypto/src/: lib.rs
crates/edge-geometry/: Cargo.toml
crates/edge-geometry/src/: lib.rs
crates/edge-keymap/: Cargo.toml
crates/edge-keymap/src/: lib.rs
crates/edge-linux-audio/: Cargo.toml
crates/edge-linux-audio/src/: lib.rs
crates/edge-linux-input/: Cargo.toml
crates/edge-linux-input/src/: cursor.rs  lib.rs  local_pointer.rs  wayland_virtual_input.rs
crates/edge-protocol/: Cargo.toml
crates/edge-protocol/src/: lib.rs
crates/edge-ui/: Cargo.toml
crates/edge-ui/src/: lib.rs
crates/edge-windows-audio/: Cargo.toml
crates/edge-windows-audio/src/: lib.rs
crates/edge-windows-input/: Cargo.toml
crates/edge-windows-input/src/: lib.rs
docs/: linux-local-cursor-handoff.md
docs/plans/: bidirectional-clipboard.md  linux-audio-streaming.md
packaging/udev/: 72-edge-kvm-pointer.rules
