[package]
name = "edge-controller-win"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
edge-common = { path = "../../crates/edge-common" }
edge-audio = { path = "../../crates/edge-audio" }
edge-crypto = { path = "../../crates/edge-crypto" }
edge-geometry = { path = "../../crates/edge-geometry" }
edge-keymap = { path = "../../crates/edge-keymap" }
edge-protocol = { path = "../../crates/edge-protocol" }
edge-ui = { path = "../../crates/edge-ui" }
edge-windows-input = { path = "../../crates/edge-windows-input" }
edge-windows-audio = { path = "../../crates/edge-windows-audio" }
tokio.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
