[package]
name = "edge-receiver-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
edge-common = { path = "../../crates/edge-common" }
edge-crypto = { path = "../../crates/edge-crypto" }
edge-linux-input = { path = "../../crates/edge-linux-input" }
edge-protocol = { path = "../../crates/edge-protocol" }
ksni = "0.3.5"
tokio.workspace = true
tracing.workspace = true
