[package]
name = "edge-receiver-linux"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
libei = ["edge-linux-input/libei"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
edge-common = { path = "../../crates/edge-common" }
edge-audio = { path = "../../crates/edge-audio" }
edge-crypto = { path = "../../crates/edge-crypto" }
edge-linux-input = { path = "../../crates/edge-linux-input" }
edge-linux-audio = { path = "../../crates/edge-linux-audio" }
edge-protocol = { path = "../../crates/edge-protocol" }
edge-ui = { path = "../../crates/edge-ui" }
ksni = "0.3.5"
socket2 = { version = "0.6.4", features = ["all"] }
tokio.workspace = true
tracing.workspace = true
