[package]
name = "edge-common"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true
toml.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true

