[package]
name = "edge-linux-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
edge-audio = { path = "../edge-audio" }
serde.workspace = true
tokio.workspace = true
toml.workspace = true
tracing.workspace = true

