[package]
name = "edge-linux-input"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
libei = []

[dependencies]
edge-common = { path = "../edge-common" }
edge-protocol = { path = "../edge-protocol" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
wayland-backend = "0.3.15"
wayland-client = "0.31.14"
wayland-protocols-wlr = { version = "0.3.12", features = ["client"] }
wayland-scanner = "0.31.10"
