[package]
name = "edge-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edge-common = { path = "../edge-common" }
bytes.workspace = true
rmp-serde.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

