[package]
name = "edge-ui"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
edge-common = { path = "../edge-common" }
eframe.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
winit = { version = "0.30.13", default-features = false }

[target.'cfg(target_os = "linux")'.dependencies]
winit = { version = "0.30.13", default-features = false, features = ["wayland", "x11"] }
