[package]
name = "edge-windows-audio"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
edge-audio = { path = "../edge-audio" }
tokio.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
cpal.workspace = true
