[package]
name = "edge-windows-input"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
edge-geometry = { path = "../edge-geometry" }
edge-keymap = { path = "../edge-keymap" }
edge-protocol = { path = "../edge-protocol" }
thiserror.workspace = true
tracing.workspace = true

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_UI_Input_KeyboardAndMouse", "Win32_UI_WindowsAndMessaging"] }
